# Strands

./: .gitignore  README.md  animals.txt  dune-project  fruits.txt  package-lock.json  sample_grid.txt  sample_words.txt  strand_set.txt  strands.opam  words.txt
client/: index.html  package-lock.json  package.json  rescript.json
client/src/: App.res  App.res.mjs  Button.res.mjs  Cell.res  Cell.res.mjs  index.css
client/src/components/: Button.res  Button.res.mjs  Cell.res  Cell.res.mjs  Game.res  Game.res.mjs  Grid.res  Grid.res.mjs  Theme.res  Theme.res.mjs  Words.res  Words.res.mjs
client/src/pages/: Dynamic.res  Dynamic.res.mjs  Home.res  Home.res.mjs  Playground.res  Playground.res.mjs  Static.res  Static.res.mjs
rescript/: Demo.res  Demo.res.js
src/lib/: david.ml  dune  game.ml  game.mli  graph.ml  graph.mli  grid.ml  grid.mli  tam.ml  utils.ml  utils.mli  words.ml  words.mli
src/server/: dune  server.ml
test/: dune  test_strands.ml
w-fullstack-rescript/: .gitignore  bsconfig.json  dune  esy.json  package.json
w-fullstack-rescript/client/: client.res
w-fullstack-rescript/common/: common.ml  dune
w-fullstack-rescript/server/: dune  server.eml.ml
