(library
 (name strands)  
 (modules grid spangram david)
 (libraries core utils)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name utils)
 (modules utils)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name game)
 (modules game)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name words)
 (modules words)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))


