(library
 (name strands)  
 (modules david)
 (libraries core utils)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name game)
 (modules game)
 (libraries core grid words utils)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name grid)
 (modules grid)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name words)
 (modules words)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))

 (library
 (name utils)
 (modules utils)
 (libraries core)
 (preprocess (pps ppx_deriving.show ppx_jane bisect_ppx)))